--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>İsmail Emir Elmas</title>
     <style>
         body {
-            background: linear-gradient(to right, #667eea, #764ba2);
+            background: linear-gradient(to right, #bdc3c7, #2c3e50);
             font-family: 'Trebuchet MS', sans-serif;
             color: white;
             text-align: center;
@@ -39,7 +39,7 @@
     <p>Welcome to my Linktree page</p>
 
     <a href="https://www.linkedin.com/in/ismail-emir-elmas-291b28211/">LinkedIn</a>
-    <a href="https://github.com/">GitHub (örnek)</a>
+    <a href="cv-dosyasi-linki.pdf" target="_blank"> Türkçe CV</a>
     <a href="#">Projelerim (yakında)</a>
 </body>
 </html>
