--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
     <a href="https://www.linkedin.com/in/ismail-emir-elmas-291b28211/">LinkedIn</a>
     <a href="cv-dosyasi-linki.pdf" target="_blank"> Türkçe CV</a>
+    <a href="cv-dosyasi-linki.pdf" target="_blank"> English CV</a>
     <a href="#">Projelerim (yakında)</a>
 </body>
 </html>
