--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>Welcome to my Linktree page</p>
 
     <a href="https://www.linkedin.com/in/ismail-emir-elmas-291b28211/">LinkedIn</a>
-    <a href="cv-dosyasi-linki.pdf" target="_blank"> Türkçe CV</a>
+    <a href="Türkçe CV.pdf" target="_blank"> Türkçe CV</a>
     <a href="cv-dosyasi-linki.pdf" target="_blank"> English CV</a>
     <a href="#">Projelerim (yakında)</a>
 </body>
