--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             color: #ffffff;
             background-color: rgba(255, 255, 255, 0.2);
             padding: 10px 20px;
-            margin: 10px;
-            display: inline-block;
+            margin: 10px auto;
+            display: block;
             border-radius: 8px;
             text-decoration: none;
             font-weight: bold;
+            width: 200px;
         }
         a:hover {
             background-color: rgba(255, 255, 255, 0.4);
